# sqlite-checkpoint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  STARTHERE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
release/: openforge-audit.json
scripts/: setup.sh
src/sqlite_checkpoint/: __init__.py  __main__.py  cli.py  core.py
tests/: conftest.py  test_cli.py  test_core.py
