[build-system]
requires = ["setuptools==68.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlite-checkpoint"
version = "0.1.0"
description = "Lightweight SQLite WAL checkpoint manager for long-running Python applications."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [
  { name = "Greyforge", email = "admin@greyforge.tech" },
]
keywords = ["sqlite", "wal", "checkpoint", "database", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: System :: Systems Administration",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build==1.4.2",
  "pytest==9.0.2",
  "ruff==0.15.0",
  "twine==6.1.0",
]

[project.scripts]
sqlite-checkpoint = "sqlite_checkpoint.cli:main"

[project.urls]
Homepage = "https://greyforge.tech"
Repository = "https://github.com/GreyforgeLabs/sqlite-checkpoint"
Issues = "https://github.com/GreyforgeLabs/sqlite-checkpoint/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
